Avoid printing table headers on second pages
Workaround for overlapping table headers on previous page on Chrome --
actual "fix" involving making the table headers the full height of the
rotated element does not seem to compatible with whole sticky header /
background colour thing.

--- a/assets/results_template/style.scss
+++ b/assets/results_template/style.scss
@@ -345,6 +345,10 @@ div#print-instructions {
       position: static;
     }
 
+    thead {
+      display: table-row-group;
+    }
+
     colgroup.event-columns col.hover {
       background-color: transparent;
     }
